--- a/bb_california_SYNC_READY_FINAL_autorefresh.html
+++ b/bb_california_SYNC_READY_FINAL_autorefresh.html
@@ -1120,7 +1120,7 @@ function upsertBooking(data){
 })();
 </script>
 
-<script src="bb_pms_cloudsync.js?v=6"></script></body>
+<script src="cloudsimple.js?v=1"></script></body>
   <!-- DEBUG: Indicatore Ultimo cloud / eTag + Forza salvataggio -->
 <script>
   (function(){
