--- a/bb_california_SYNC_READY_FINAL_autorefresh.html
+++ b/bb_california_SYNC_READY_FINAL_autorefresh.html
@@ -1145,6 +1145,6 @@ function upsertBooking(data){
   else { setupUmbrellaRequirement(); }
 })();
 </script>
-
+<script src="bb_pms_cloud_client_min.js?v=1"</script>
 </body>
 </html>
